chore: update .gitignore to production-ready template

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Virtual environments
 venv/
+.env/
+.venv/
+
+# Bytecode
+__pycache__/
+*.py[cod]
+
+# Logs
+*.log
+
+# IDEs
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Test cache
+.pytest_cache/
