fix: add PYTHONPATH to CI for pytest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,5 @@ jobs:
           pip install pytest
 
       - name: Run tests
-        run: pytest
+        run: PYTHONPATH=. pytest
+        language_version: python3.10
